Simplify Stream call chains